# podcastist

./: .gitignore  LICENSE  README.md  podcast_dl_apple.py  podcast_dl_fs.py  pyproject.toml  sound2text.py
